# nightfocus

./: .gitignore  README.md  mypy.ini  pyproject.toml
.github/workflows/: tests.yml
examples/: focus_optimization.py
images/: image_001.tiff  image_001_dataset_metrics.csv  image_002.tiff  image_003.tiff  image_004.tiff  image_005.tiff  image_006.tiff  image_007.tiff  image_008.tiff  image_009.tiff
nightfocus/: camera.py  dataset.py  focus_metrics.py  main.py  scoring.py
nightfocus/scoring_functions/: __init__.py  entropy.py
nightfocus/scoring_functions.py/: entropy.py
tests/: conftest.py  test_camera_optimization.py  test_scoring.py
